crates/ditto-checker/tests/golden/type-errors/package_not_found.ditto
module Test exports (..);

import (missing-package) Missing.Module;
